--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 		<a href="#tab">选项卡</a>
 		<a href="#layout">表单布局</a>
 		<a href="#popup">弹窗</a>
+		<a href="#date">日期选择</a>
 	</menu>
 	<header id="header">前端开发规范手册</header>
 	<section>
@@ -297,6 +298,15 @@
 					<span id="popup1" class="popup">弹窗1</span>
 					<span id="popup2" class="popup">弹窗2</span>
 					<span id="popup3" class="popup">弹窗3</span>
+				</div>
+			</article>
+			<article id="date">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>日期选择</p>
+				<!-- 弹窗 -->
+				<div>
 				</div>
 			</article>
 
