--- a/index.html
+++ b/index.html
@@ -139,15 +139,6 @@
 			<!-- 按钮7 -->
 			<button class="layui-btn layui-btn-normal layui-btn-sm">小型按钮3</button>
 			<button class="layui-btn layui-btn-danger layui-btn-sm">小型删除按钮</button>
-			<!-- 固定底部按钮 -->
-			<!-- <div class="bottom-layui-btn">
-				<button type="button" class="layui-btn">保存并提交</button>
-			</div> -->
-			<div class="bottom-layui-btn">
-				<button type="button" class="layui-btn layui-btn-normal">保存草稿</button>
-				<button type="button" class="layui-btn layui-btn-six">保存并提交<i
-						class="layui-icon layui-icon-down"></i></button>
-			</div>
 		</article>
 		<article id="input">
 			<form class="layui-form">
@@ -332,101 +323,116 @@
 				<p class="subTitle">表单布局1 - 预留提示空间</p>
 				<form class="layui-form" action="">
 					<p class="form-title">标题</p>
-					<div class="layui-form-item">
+					<div class="layui-form-item input-layout-one">
 						<label class="layui-form-label">单行输入框：</label>
-						<div class="layui-input-block">
-							<input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题"
-								class="layui-input">
+						<div class="layui-input-inline context">
+
+							<div class="input-second-container">
+								<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off"
+									class="layui-input">
+								<div class="input-number"><span class="input-on-number">0</span>/<span
+										class="input-max-number">100
+										</spani>
+								</div>
+							</div>
 							<p class="desc">描述</p>
 							<p class="msg">错误提示</p>
 						</div>
+						<div class="layui-form-mid layui-word-aux">同步图书信息</div>
 					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label"><span class="tip">*</span>验证必填项：</label>
+						<div class="layui-input-block">
+							<div class="input-one1-container">
+								<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
+									autocomplete="off" class="layui-input">
+							</div>
+						</div>
+					</div>
+				</form>
+				<p class="subTitle">表单布局2</p>
+				<form class="layui-form" action="">
+					<div class="layui-form-item">
+						<div class="layui-inline">
+							<label class="layui-form-label">出版日期：</label>
+							<div class="layui-input-block">
+								<div class="input-one1-container">
+									<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
+										autocomplete="off" class="layui-input">
+								</div>
+							</div>
+						</div>
+						<div class="layui-inline input-layout-two">
+							<label class="layui-form-label">印刷日期：</label>
+							<div class="layui-input-block">
+								<div class="input-one1-container">
+									<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
+										autocomplete="off" class="layui-input">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-inline">
+							<label class="layui-form-label">出版日期：</label>
+							<div class="layui-input-block">
+								<div class="input-one1-container">
+									<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
+										autocomplete="off" class="layui-input">
+									<p class="desc">描述</p>
+									<p class="msg">错误提示</p>
+								</div>
+							</div>
+						</div>
+						<div class="layui-inline input-layout-two">
+							<label class="layui-form-label">印刷日期：</label>
+							<div class="layui-input-block">
+								<div class="input-one1-container">
+									<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
+										autocomplete="off" class="layui-input">
+									<p class="desc">描述</p>
+									<p class="msg">错误提示</p>
+								</div>
+							</div>
+						</div>
+						<div class="layui-inline">
+							<div class="input-one2-container">
+								<input type="text" name="title" placeholder="输入搜索关键字 input-one2-container"
+									autocomplete="off" class="layui-input">
+								<p class="desc"></p>
+								<p class="msg"></p>
+							</div>
+						</div>
+					</div>
+				</form>
+			</article>
+			<article id="lable">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>标签</p>
+				<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
+			</article>
+			<article id="table">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>数据表格</p>
+				<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
+				<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
+			</article>
+			<article id="popup">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>弹窗</p>
+				<!-- 弹窗 -->
+				<div>
+					<span id="popup1" class="popup">弹窗1</span>
+					<span id="popup2" class="popup">弹窗2</span>
+					<span id="popup3" class="popup">弹窗3</span>
 				</div>
-			</form>
-			<p class="subTitle">表单布局2</p>
-			<form class="layui-form" action="">
-				<div class="layui-form-item">
-					<div class="layui-inline">
-						<label class="layui-form-label">出版日期：</label>
-						<div class="layui-input-block">
-							<div class="input-one1-container">
-								<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
-									autocomplete="off" class="layui-input">
-							</div>
-						</div>
-					</div>
-					<div class="layui-inline input-layout-two">
-						<label class="layui-form-label">印刷日期：</label>
-						<div class="layui-input-block">
-							<div class="input-one1-container">
-								<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
-									autocomplete="off" class="layui-input">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="layui-form-item">
-					<div class="layui-inline">
-						<label class="layui-form-label">出版日期：</label>
-						<div class="layui-input-block">
-							<div class="input-one1-container">
-								<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
-									autocomplete="off" class="layui-input">
-								<p class="desc">描述</p>
-								<p class="msg">错误提示</p>
-							</div>
-						</div>
-					</div>
-					<div class="layui-inline input-layout-two">
-						<label class="layui-form-label">印刷日期：</label>
-						<div class="layui-input-block">
-							<div class="input-one1-container">
-								<input type="text" name="title" placeholder="输入搜索关键字 input-one1-container"
-									autocomplete="off" class="layui-input">
-								<p class="desc">描述</p>
-								<p class="msg">错误提示</p>
-							</div>
-						</div>
-					</div>
-					<div class="layui-inline">
-						<div class="input-one2-container">
-							<input type="text" name="title" placeholder="输入搜索关键字 input-one2-container"
-								autocomplete="off" class="layui-input">
-							<p class="desc"></p>
-							<p class="msg"></p>
-						</div>
-					</div>
-				</div>
-			</form>
-
-		</article>
-		<article id="lable">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>标签</p>
-			<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
-		</article>
-		<article id="table">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>数据表格</p>
-			<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
-			<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
-		</article>
-		<article id="popup">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>弹窗</p>
-			<!-- 弹窗 -->
-			<div>
-				<span id="popup1" class="popup">弹窗1</span>
-				<span id="popup2" class="popup">弹窗2</span>
-				<span id="popup3" class="popup">弹窗3</span>
-			</div>
-		</article>
+			</article>
 
 	</section>
 </body>
@@ -462,7 +468,7 @@
 		$('iframe[data-id=' + dataId + ']')[0].contentWindow.setTable(data);
 	}
 
- 
+
 	//设置数据表格tableOne高度
 	// function setTableOneHeight(tableOneHeight){
 	// 	// 设置info模板中相应iframe的高度
@@ -482,15 +488,15 @@
 
 
 	//设置iframe高度
-	function setIframeHeight(height,type) {
+	function setIframeHeight(height, type) {
 		$('.high-search-iframe').height(height);
 		console.log(height)
-		if(type == 'open'){
+		if (type == 'open') {
 			$('.high-search-iframe').parent().removeClass('float-right')
-			$('.high-search-iframe').css('margin-top','15px')
-		}else if (type == 'fold'){
+			$('.high-search-iframe').css('margin-top', '15px')
+		} else if (type == 'fold') {
 			$('.high-search-iframe').parent().addClass('float-right')
-			$('.high-search-iframe').css('margin-top','0')
+			$('.high-search-iframe').css('margin-top', '0')
 		}
 	}
 
