--- a/payroll_list.html
+++ b/payroll_list.html
@@ -90,7 +90,7 @@
                             <span>总览</span>
                         </a>
                     </li>
-                    <li class="layui-nav-item layui-nav-itemed">
+                    <li class="layui-nav-item">
                         <a href="#">
                             <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#iconsource-block"></use>
@@ -99,7 +99,18 @@
                         </a>
                         <dl class="layui-nav-child">
                             <dd><a href="#">文章列表</a></dd>
-                            <dd class="layui-this"><a href="#">专辑列表</a></dd>
+                            <dd><a href="#">专辑列表</a></dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item  layui-nav-itemed">
+                        <a href="#">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icondistribution"></use>
+                            </svg>
+                            <span>代发系统</span>
+                        </a>
+                        <dl class="layui-nav-child">
+                            <dd class="layui-this"><a href="#">代发商品库</a></dd>
                         </dl>
                     </li>
                 </ul>
@@ -143,7 +154,9 @@
                 <div>
                     <div class="layui-tab layui-tab-brief" lay-filter="docDemoTabBrief">
                         <ul class="layui-tab-title">
-                            <li class="layui-this">音视频专辑列表</li>
+                            <li class="layui-this">代发商品库</li>
+                            <li>授权商户管理</li>
+                            <li>代发订单查询</li>
                         </ul>
                     </div>
                 </div>
