--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 			</div> -->
 			<div class="bottom-layui-btn">
 				<button type="button" class="layui-btn layui-btn-normal">保存草稿</button>
-				<button type="button" class="layui-btn layui-btn-six">保存并提交<i class="layui-icon layui-icon-down"></i></button>
+				<button type="button" class="layui-btn layui-btn-six">保存并提交<i
+						class="layui-icon layui-icon-down"></i></button>
 			</div>
 		</article>
 		<article id="input">
@@ -169,11 +170,30 @@
 				<div class="input-second-container">
 					<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off" class="layui-input">
 					<div class="input-number"><span class="input-on-number">0</span>/<span class="input-max-number">100
-							</spani>
+							</span>
 					</div>
 				</div>
 				<p class="subTitle">文本域3</p>
 				<div class="input-third-container">
+					<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off" class="layui-input">
+					<div class="input-before">￥</div>
+				</div>
+				<p class="subTitle">文本域4</p>
+				<div class="input-four-container">
+					<textarea name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
+				</div>
+				<p class="subTitle">文本域5</p>
+				<div class="input-five-container">
+					<textarea name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
+					<div class="clear-float">
+						<div class="desc float-left">将用于前台信息展示，字数300字以内，支持换行。 拷贝</div>
+						<div class="input-number float-right"><span class="input-on-number">0</span>/<span class="input-max-number">300
+							</span>
+						</div>
+					</div>
+				</div>
+				<p class="subTitle">文本域6</p>
+				<div class="input-six-container">
 					<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off" class="layui-input">
 					<div class="input-before">￥</div>
 				</div>
@@ -339,36 +359,36 @@
 							<p class="msg">错误提示</p>
 						</div>
 					</div>
+					</div>
+				</form>
+			</article>
+			<article id="lable">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>标签</p>
+				<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
+			</article>
+			<article id="table">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>数据表格</p>
+				<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
+				<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
+			</article>
+			<article id="popup">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>弹窗</p>
+				<!-- 弹窗 -->
+				<div>
+					<span id="popup1" class="popup">弹窗1</span>
+					<span id="popup2" class="popup">弹窗2</span>
+					<span id="popup3" class="popup">弹窗3</span>
 				</div>
-			</form>
-		</article>
-		<article id="lable">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>标签</p>
-			<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
-		</article>
-		<article id="table">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>数据表格</p>
-			<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
-			<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
-		</article>
-		<article id="popup">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>弹窗</p>
-			<!-- 弹窗 -->
-			<div>
-				<span id="popup1" class="popup">弹窗1</span>
-				<span id="popup2" class="popup">弹窗2</span>
-				<span id="popup3" class="popup">弹窗3</span>
-			</div>
-		</article>
+			</article>
 
 	</section>
 </body>
@@ -424,15 +444,15 @@
 
 
 	//设置iframe高度
-	function setIframeHeight(height,type) {
+	function setIframeHeight(height, type) {
 		$('.high-search-iframe').height(height);
 		console.log(height)
-		if(type == 'open'){
+		if (type == 'open') {
 			$('.high-search-iframe').parent().removeClass('float-right')
-			$('.high-search-iframe').css('margin-top','15px')
-		}else if (type == 'fold'){
+			$('.high-search-iframe').css('margin-top', '15px')
+		} else if (type == 'fold') {
 			$('.high-search-iframe').parent().addClass('float-right')
-			$('.high-search-iframe').css('margin-top','0')
+			$('.high-search-iframe').css('margin-top', '0')
 		}
 	}
 
