--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				<div class="input-second-container">
 					<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off" class="layui-input">
 					<div class="input-number"><span class="input-on-number">0</span>/<span class="input-max-number">100
-							</span>
+						</span>
 					</div>
 				</div>
 				<p class="subTitle">文本域3</p>
@@ -188,7 +188,8 @@
 					<textarea name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
 					<div class="clear-float">
 						<div class="desc float-left">将用于前台信息展示，字数300字以内，支持换行。 拷贝</div>
-						<div class="input-number float-right"><span class="input-on-number">0</span>/<span class="input-max-number">300
+						<div class="input-number float-right"><span class="input-on-number">0</span>/<span
+								class="input-max-number">300
 							</span>
 						</div>
 					</div>
@@ -516,15 +517,23 @@
 
 
 	//设置iframe高度
-	function setIframeHeight(height, type) {
-		$('.high-search-iframe').height(height);
-		console.log(height)
-		if (type == 'open') {
-			$('.high-search-iframe').parent().removeClass('float-right')
-			$('.high-search-iframe').css('margin-top', '15px')
-		} else if (type == 'fold') {
-			$('.high-search-iframe').parent().addClass('float-right')
-			$('.high-search-iframe').css('margin-top', '0')
+	function setIframeHeight(height, type, hight_sign) {
+		switch (type) {
+			case 'hight-search-iframe':
+				$('.high-search-iframe').height(height);
+				console.log(height)
+				if (hight_sign == 'open') {
+					$('.high-search-iframe').parent().removeClass('float-right')
+					$('.high-search-iframe').css('margin-top', '15px')
+				} else if (hight_sign == 'fold') {
+					$('.high-search-iframe').parent().addClass('float-right')
+					$('.high-search-iframe').css('margin-top', '0')
+				}
+				break;
+			case '':
+				break;
+			default:
+				break;
 		}
 	}
 
