--- a/iframe-2.0/lable.html
+++ b/iframe-2.0/lable.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>火把知识-后台</title>
 	<link rel="stylesheet" type="text/css" href="../layui-2.0/css/layui.css">
-	<link rel="stylesheet" type="text/css" href="../layui-2.0/inputtags/inputTags.css">
 	<!-- 公用样式 -->
 	<link rel="stylesheet" type="text/css" href="../layui-2.0/css/public.css">
 </head>
@@ -81,7 +80,7 @@
 <script type="text/javascript" src="../layui-2.0/layui.js"></script>
 <script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="../layui-2.0/public.js"></script>
-<script type="text/javascript" src="../layui-2.0/inputtags/inputTags.js"></script>
+<script type="text/javascript" src="../layui-2.0/js/component/lable.js"></script>
 <script type="text/javascript">
 	//标签标示id
 	var lableId;
