--- a/index.html
+++ b/index.html
@@ -470,15 +470,15 @@
 
 
 	//设置数据表格tableOne高度
-	// function setTableOneHeight(tableOneHeight){
-	// 	// 设置info模板中相应iframe的高度
-	// 	$('iframe[name=tableOne]').css('height', tableOneHeight);
-	// }
+	function setTableOneHeight(tableOneHeight){
+		// 设置info模板中相应iframe的高度
+		$('iframe[name=tableOne]').css('height', tableOneHeight);
+	}
 	//设置数据表格tableTwo高度
-	// function setTableTwoHeight(tableTwoHeight){
-	// 	// 设置info模板中相应iframe的高度
-	// 	$('iframe[name=tableTwo]').css('height', tableTwoHeight);
-	// }
+	function setTableTwoHeight(tableTwoHeight){
+		// 设置info模板中相应iframe的高度
+		$('iframe[name=tableTwo]').css('height', tableTwoHeight);
+	}
 
 	// 设置iframe当前标识
 	function setIframeDataId(id) {
